* CameraPreviewRenderer.cs: adding work orders
* ManageGo.csproj:
* CamRecorder.cs:
* CameraPreview.cs:
* UICameraPreview.cs:
* MainActivity.cs:
* ManageGo.iOS.csproj:
* TakeVideoPage.xaml:
* MGWebViewPage.xaml:
* CameraPageRenderer.cs:
* VideoPlayerPage.xaml:
* TicketDetailsPage.xaml:
* ManageGo.Android.csproj:
* TakeVideoPageModel.cs:
* MGWebViewPageModel.cs:
* capture_camera.png:
* capture_camera@3x.png:
* capture_camera@2x.png:
* TicketDetailsPageModel.cs:
* capture_video_stop.png:
* capture_video_play.png:
* Resource.designer.cs:
* capture_video_stop@3x.png:
* capture_video_play@2x.png:
* capture_video_play@3x.png:
* capture_video_stop@2x.png:
* capture_camera.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_camera.png:
* capture_camera.png:
* capture_camera.png:
* capture_camera.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_video_stop.png:
* capture_video_play.png:
* capture_video_play.png:
* capture_video_stop.png:

--- a/ManageGo/Views/TakeVideoPage.xaml
+++ b/ManageGo/Views/TakeVideoPage.xaml
@@ -36,8 +36,17 @@
                     </Image>
                 </StackLayout>
             </Grid>
-             <ContentView Grid.Row="1" Content="{Binding CameraPreviewContent}" HorizontalOptions="FillAndExpand" 
+            <ContentView Grid.Row="1" Content="{Binding CameraPreviewContent}" HorizontalOptions="FillAndExpand" 
                                  VerticalOptions="FillAndExpand" BackgroundColor="Black" />
+            <Image Grid.Row="1" VerticalOptions="EndAndExpand" 
+                   HorizontalOptions="CenterAndExpand" 
+                   Margin="0,0,0,28"
+                   Source="{Binding CaptureButtonIcon}">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer NumberOfTapsRequired="1"
+                                          Command="{Binding OnCaptureButtonTapped}" />
+                </Image.GestureRecognizers>
+            </Image>
         </Grid>
    
 </ContentPage>
