--- a/ManageGo/Views/VideoPlayerPage.xaml
+++ b/ManageGo/Views/VideoPlayerPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
               xmlns:video="clr-namespace:FormsVideoLibrary"
               BackgroundColor="#231f20"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             ios:Page.UseSafeArea="true" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.VideoPlayerPage">
     
     <Grid>
