--- a/ManageGo/Views/MGWebViewPage.xaml
+++ b/ManageGo/Views/MGWebViewPage.xaml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:local="clr-namespace:ManageGo"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             ios:Page.UseSafeArea="true"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              BackgroundColor="#231f20"
              x:Class="ManageGo.MGWebViewPage">
