* RobotoMono-Bold.ttf: fixing clock popup
* App.xaml:
* Info.plist:
* ManageGo.iOS.csproj:
* ClockPicker.cs:
* TicketDetailsPage.xaml:
* close_black.png:
* close_white.png:
* ManageGo.Android.csproj:
* TicketDetailsPage.xaml.cs:
* RobotoMono-Bold.ttf:
* TicketDetailsPageModel.cs:
* Resource.designer.cs:
* close_black.png:
* close_white.png:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -17,6 +17,10 @@
             <Style x:Key="Regular-Text" TargetType="Label">
                 
             </Style>
+            <OnPlatform x:TypeArguments="x:String" x:Key="MonoBoldFont">
+                <On Platform="Android" Value="RobotoMono-Bold.ttf#Roboto Mono Bold" />
+                <On Platform="iOS" Value="RobotoMono-Bold" />
+            </OnPlatform>
             <Style x:Key="Small-Text" TargetType="Label" BasedOn="{StaticResource Regular-Text}">
                 <Setter Property="FontSize" Value="Small" />
             </Style> 
