* ManageGo.Android.csproj: Added first login page
* App.xaml.cs:
* LoginPage.xaml:
* AvailableAuthTypes.cs:
* LocalAuthHelper.cs:
* ClockPicker.cs:
* ManageGo.iOS.csproj:
* LoginPage.xaml.cs:
* pm_active.png:
* am_active.png:
* LoginPageModel.cs:
* TicketDetailsPage.xaml:
* am_inactive.png:
* pm_inactive.png:
* am_active@3x.png:
* am_active@2x.png:
* pm_active@2x.png:
* pm_active@3x.png:
* am_inactive@3x.png:
* am_inactive@2x.png:
* pm_inactive@2x.png:
* pm_inactive@3x.png:
* TicketDetailsPageModel.cs:
* Resource.designer.cs:
* am_active.png:
* pm_active.png:
* am_inactive.png:
* pm_inactive.png:
* pm_active.png:
* am_active.png:
* pm_active.png:
* am_active.png:
* am_active.png:
* pm_inactive.png:
* am_inactive.png:
* pm_active.png:
* pm_inactive.png:
* pm_active.png:
* am_inactive.png:
* am_active.png:
* am_inactive.png:
* pm_inactive.png:
* pm_inactive.png:
* am_inactive.png:

--- a/ManageGo/Views/TicketDetailsPage.xaml
+++ b/ManageGo/Views/TicketDetailsPage.xaml
@@ -431,24 +431,23 @@
                 <StackLayout>
                     <Label Text="{Binding PickerTitleText}" TextColor="Gray" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center"/>
                     <Grid>
-                        <Label Text="AM" Grid.Column="0" HorizontalOptions="EndAndExpand" VerticalOptions="Center" TextColor="{Binding AMTextColor}">
-                            <Label.GestureRecognizers>
+                        <Image Source="{Binding AmButtonImage}" Grid.Column="0" HorizontalOptions="EndAndExpand" VerticalOptions="Center">
+                            <Image.GestureRecognizers>
                                 <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnSelectAMTapped}" />
-                            </Label.GestureRecognizers>
-                        </Label>
+                            </Image.GestureRecognizers>
+                        </Image>
                         <Label Text="{Binding CurrentTime}" HorizontalOptions="CenterAndExpand" Grid.Column="1" FontFamily="{StaticResource Key=MonoBoldFont}" VerticalOptions="Center" FontSize="Large" />
-                        <Label Text="PM" VerticalOptions="Center" Grid.Column="2" HorizontalOptions="StartAndExpand" TextColor="{Binding PMTextColor}">
-                             <Label.GestureRecognizers>
+                        <Image Source="{Binding PmButtonImage}" VerticalOptions="Center" Grid.Column="2" HorizontalOptions="StartAndExpand">
+                             <Image.GestureRecognizers>
                                 <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnSelectPMTapped}" />
-                            </Label.GestureRecognizers>
-                        </Label>
+                            </Image.GestureRecognizers>
+                        </Image>
                     </Grid>
                     <local:ClockPicker Time="{Binding PickedTime,Mode=TwoWay}"/>
-                    <Button Command="{Binding OnSetTimeFromPickerTapped}" HorizontalOptions="FillAndExpand" Text="Set time" TextColor="White" BorderRadius="8" BackgroundColor="#51c623" />
+                    <Button Command="{Binding OnSetTimeFromPickerTapped}" HorizontalOptions="FillAndExpand" Text="Set time" FontSize="Large" TextColor="White" BorderRadius="8" BackgroundColor="#51c623" />
                 </StackLayout>
                  <Frame.GestureRecognizers>
                     <TapGestureRecognizer NumberOfTapsRequired="1"  />
-
                 </Frame.GestureRecognizers>
             </Frame>
             <Grid.GestureRecognizers>
